Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-7973] LLDB can't find enum's associated values within switch #4494

Closed
swift-ci opened this issue Jun 11, 2018 · 3 comments
Closed

[SR-7973] LLDB can't find enum's associated values within switch #4494

swift-ci opened this issue Jun 11, 2018 · 3 comments
Assignees
Labels

Comments

@swift-ci
Copy link

Previous ID SR-7973
Radar rdar://problem/41048339
Original Reporter twof (JIRA User)
Type Bug
Status Resolved
Resolution Done
Environment

Xcode 9.4

Additional Detail from JIRA
Votes 0
Component/s Compiler, LLDB for Swift
Labels Bug, DebugInfo
Assignee @vedantk
Priority Medium

md5: 762758d965b1d4178c279d1c4886b8aa

Issue Description:

Repro

enum Foo {
    case zero
    case one(String)
    case two(String)
}


let foo = Foo.one("hello")

switch foo {
case .zero:
    print("hello")
case .one(let hello), .two(let hello):
    print(hello) // (lldb) po hello
                 // error: <EXPR>:3:1: error: use of unresolved identifier 'hello'
                 // hello
                 // ^~~~~
}
@belkadan
Copy link

cc @adrian-prantl

@adrian-prantl
Copy link
Member

@swift-ci create

@vedantk
Copy link
Member

vedantk commented Jun 10, 2020

Addressed in apple/swift#32282

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from apple/swift May 7, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
Projects
None yet
Development

No branches or pull requests

4 participants